--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MODFOLDER="C:\Users\mailt\AppData\Roaming\.minecraft\mods" # Change this to the folder where your game looks for the mods. 
-AUTOMATEDMODSSTORAGE="C:\Users\mailt\AppData\Roaming\.minecraft\AutomatedModsStorage" # change this to the folder where you want to store the mods.
+MODFOLDER="C:\Users\USERNAME\AppData\Roaming\.minecraft\mods" # Change this to the folder where your game looks for the mods. 
+AUTOMATEDMODSSTORAGE="C:\Users\USERNAME\AppData\Roaming\.minecraft\AutomatedModsStorage" # change this to the folder where you want to store the mods.
